src/blocks/row-maxi/editor.scss
.maxi-row-block {
	position: relative;
	width: 100%;
	margin: auto;
	padding: 0;
	z-index: 2;

	&__template {
		display: flex;
		flex-wrap: wrap;
		background-color: transparent;
		width: 100%;
		padding: 36px 1rem;
		margin: 0 auto;
		justify-content: center;
		max-width: 1170px;
		z-index: 1;

		&__button {
			width: auto;
			height: auto;
			display: inline-block;
			padding: 12px !important;

			&:hover {
				svg {
					stroke: #ff4a17;
					fill: #fff;
					filter: drop-shadow(0 0 1px rgba(0, 0, 0, 0.3));
				}
			}

			svg {
				width: 152px;
				height: 48px;
				fill: #151617;
				stroke: #151617;
				display: block;
			}
		}
	}

	&__empty {
		&.is-selected {
			&::after {
				border-color: #7fbddc !important;
			}
		}
		&::after {
			opacity: 1;
		}
	}
}

html body.maxi-blocks--active .maxi-row-block[data-align='full'] {
	max-width: 100% !important;
	width: 100% !important;
}

